fix: add text overflow

--- a/assets/scss/components/_navigation.scss
+++ b/assets/scss/components/_navigation.scss
@@ -6,6 +6,7 @@
   top: 0;
   z-index: 9999;
   transition: background-color 0.4s ease-out;
+  background-color: #f7fdff !important;
   &.scroll {
     background-color: color(eden-neutral-7) !important;
     box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.05);
